--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy2": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
