--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.2.3",
     "gh-pages": "^5.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
