--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
